lecture/01_Einfuehrung/listings/otherSynError_Listing.txt

File "zweiterTest.py", line 1
    print)
         ^
SyntaxError: invalid syntax
